@@ -5,7 +5,9 @@
 // TODO SPC MESO rescan for _sf, convert to list
 // TODO make model activities more consistent, ex SPC SREF does not have setupModel()
 
-55051 2018_11_18 coroutine conversion: SPCStormReportsActivity
+55053 2018_11_20 move NSSL to generic model
+55052 2018_11_20 move ESRL to generic model
+55051 2018_11_19 coroutine conversion: SPCStormReportsActivity
                  refactor model code such as WPCGEFS
                  implement generic model activity and move WPCGEFS to it
 55050 2018_11_18 rationalize ESRL and NCEP to be more like WRF in terms of setupModel and var naming
